<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hevs.y1617.valaisstudygrp2.Login"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/pagelogin_labelWelcome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/labelUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="70dp"
                android:gravity="left"
                android:text="@string/pagelogin_labelUsername"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelUsername"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="left"
                android:inputType="textEmailAddress"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/pagelogin_labelPassword"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="left"
                android:inputType="textPassword"
                android:textSize="18dp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:onClick="loginAsUser"
                android:text="@string/pagelogin_buttonLogin"
                android:background="@drawable/button_round_corner"/>

            <TextView
                android:id="@+id/labelOder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/pagelogin_oder"
                android:textColor="#000000"
                android:textSize="14dp" />

            <Button
                android:id="@+id/buttonLoginWithoutRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelOder"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:onClick="openHome"
                android:text="@string/pagelogin_buttonLoginLocal"
                android:background="@drawable/button_round_corner"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLoginWithoutRegistration"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="90dp"
                android:minWidth="200dp"
                android:onClick="openRegistration"
                android:text="@string/pagelogin_buttonRegister"
                android:background="@drawable/button_round_corner" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
