<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_quizdifficulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hevs.y1617.valaisstudygrp2.Quizdifficulty"
    tools:showIn="@layout/activity_quizdifficulty">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <Button
        android:text="@string/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/btnmedium"
        android:layout_below="@+id/btneasy"
        android:layout_alignLeft="@+id/btneasy"
        android:layout_alignStart="@+id/btneasy"
        android:minWidth="150dip"
        android:minHeight="50dp"
        android:onClick="selectmedium"
        android:background="@drawable/button_round_corner"
        android:textColor="@android:color/white"/>

    <Button
        android:text="@string/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/btnhard"
        android:layout_below="@+id/btnmedium"
        android:layout_alignLeft="@+id/btnmedium"
        android:layout_alignStart="@+id/btnmedium"
        android:minWidth="150dip"
        android:minHeight="50dp"
        android:onClick="selecthard"
        android:background="@drawable/button_round_corner"
        android:textColor="@android:color/white"/>

    <Button
        android:text="@string/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btneasy"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minWidth="150dip"
        android:minHeight="50dp"
        android:onClick="selecteasy"
        android:background="@drawable/button_round_corner"
        android:textColor="@android:color/white"/>


    <TextView
        android:text="@string/Labeldifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Labeldiff"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_above="@+id/btneasy"
        android:layout_marginBottom="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
