<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_learning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hevs.y1617.valaisstudygrp2.QuizTopic"
    tools:showIn="@layout/activity_quiz_topic">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:verticalScrollbarPosition="right">

            <TextView
                android:text="@string/LearningsAction"
                android:layout_below="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/textViewLearning" />

            <Button
                android:text="@string/Destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLearning"
                android:layout_alignLeft="@+id/TransportsInfrastructures"
                android:layout_alignStart="@id/TransportsInfrastructures"
                android:layout_alignRight="@+id/TransportsInfrastructures"
                android:layout_alignEnd="@+id/TransportsInfrastructures"
                android:drawableLeft="@mipmap/ic_general_informations"
                android:background="@drawable/button_round_corner"
                android:layout_marginTop="36dp"
                android:onClick="DisplayDestination"
                android:id="@+id/Destination"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/Gastronomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Destination"
                android:layout_centerHorizontal="true"
                android:layout_alignLeft="@+id/TransportsInfrastructures"
                android:layout_alignStart="@id/TransportsInfrastructures"
                android:layout_alignRight="@+id/TransportsInfrastructures"
                android:layout_alignEnd="@+id/TransportsInfrastructures"
                android:drawableLeft="@mipmap/ic_gastronomy"
                android:background="@drawable/button_round_corner"
                android:layout_marginTop="33dp"
                android:onClick="DisaplyGastronomy"
                android:id="@+id/Gastronomy"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/LeisureEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Gastronomy"
                android:layout_centerHorizontal="true"
                android:layout_alignLeft="@+id/TransportsInfrastructures"
                android:layout_alignStart="@id/TransportsInfrastructures"
                android:layout_alignRight="@+id/TransportsInfrastructures"
                android:layout_alignEnd="@+id/TransportsInfrastructures"
                android:drawableLeft="@mipmap/ic_leisure"
                android:background="@drawable/button_round_corner"
                android:layout_marginTop="33dp"
                android:onClick="DisplayLeisuresEvents"
                android:id="@+id/LeisureEvents"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/TransportzInfrastructures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LeisureEvents"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:drawableLeft="@mipmap/ic_transport"
                android:background="@drawable/button_round_corner"
                android:onClick="DisplayTransportsInfratructures"
                android:id="@+id/TransportsInfrastructures"
                android:textColor="@android:color/white"/>

            <Button
                android:text="@string/Customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TransportsInfrastructures"
                android:layout_centerHorizontal="true"
                android:layout_alignLeft="@+id/TransportsInfrastructures"
                android:layout_alignStart="@id/TransportsInfrastructures"
                android:layout_alignRight="@+id/TransportsInfrastructures"
                android:layout_alignEnd="@+id/TransportsInfrastructures"
                android:drawableLeft="@mipmap/ic_customers_infos"
                android:background="@drawable/button_round_corner"
                android:layout_marginTop="33dp"
                android:onClick="DisplayCustomer"
                android:id="@+id/Customer"
                android:textColor="@android:color/white"/>

            <Button
                android:text="Destination ändern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:onClick="changeDestination"
                android:textSize="12sp"
                android:background="@drawable/button_round_corner"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
