<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hevs.y1617.valaisstudygrp2.Home"
    tools:showIn="@layout/app_bar_home">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:verticalScrollbarPosition="right">

            <TextView
                android:text="@string/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="55dp"
                android:id="@+id/textView4"
                android:textSize="28sp"
                android:textColor="@android:color/black"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/wallis_map"
                android:id="@+id/wallisMap"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp" />

            <Button
                android:text="@string/btnRedirectLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wallisMap"
                android:drawableLeft="@mipmap/ic_login_icon"
                android:background="@drawable/button_round_corner"
                android:paddingRight="10dp"
                android:layout_marginRight="87dp"
                android:layout_marginEnd="87dp"
                android:layout_marginTop="60dp"
                android:id="@+id/btnRedirectLogin"
                android:onClick="redirectLogin"/>

            <Button
                android:text="@string/btnForceSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnRedirectLogin"
                android:drawableLeft="@mipmap/ic_synchronise"
                android:background="@drawable/button_round_corner"
                android:paddingRight="10dp"
                android:layout_marginRight="87dp"
                android:layout_marginEnd="87dp"
                android:layout_marginTop="20dp"
                android:id="@+id/btnForceSync"
                android:onClick="forceSync"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>